--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "app/page.jsx",
-    "app/layout.jsx"
+    "app/layout.jsx",
+    "app/components/ThemeButton.jsx"
   ],
   "exclude": ["node_modules"]
 }
